Fix overlapping content issues on index.php - improve image positioning and overflow handling

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,36 @@
     font-weight: 900 !important;
 }
 
+/* Prevent overlapping content */
+.container-fluid {
+    position: relative;
+    z-index: 1;
+}
+
+.container-xxl {
+    position: relative;
+    z-index: 2;
+}
+
+/* Ensure proper spacing between sections */
+.container-fluid.bg-light {
+    overflow: hidden;
+}
+
+.container-fluid.bg-light .position-relative {
+    position: relative !important;
+    overflow: hidden;
+}
+
+.container-fluid.bg-light .position-absolute {
+    position: absolute !important;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .back-to-top {
     position: fixed;
     display: none;
@@ -157,6 +187,27 @@
     background: rgba(22, 22, 22, .7);
 }
 
+.header-carousel .owl-carousel-item {
+    position: relative;
+    min-height: 600px;
+    overflow: hidden;
+}
+
+.header-carousel .owl-carousel-item img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+}
+
+/* Ensure carousel doesn't overlap with content below */
+.container-fluid.p-0.pb-5 {
+    margin-bottom: 0;
+    padding-bottom: 0 !important;
+}
+
 @media (max-width: 768px) {
     .header-carousel .owl-carousel-item {
         position: relative;
@@ -272,6 +323,24 @@
     .about-text  {
         padding-right: calc(((100% - 960px) / 2) + .75rem);
     }
+
+    .container.about .col-lg-6.ps-lg-0 {
+        position: relative;
+        overflow: hidden;
+    }
+
+    .container.about .col-lg-6.ps-lg-0 .position-relative {
+        position: relative !important;
+    }
+
+    .container.about .col-lg-6.ps-lg-0 .position-absolute {
+        position: absolute !important;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 
 @media (min-width: 1200px) {
@@ -322,6 +391,24 @@
 
     .feature-text  {
         padding-left: calc(((100% - 960px) / 2) + .75rem);
+    }
+
+    .container.feature .col-lg-6.pe-lg-0 {
+        position: relative;
+        overflow: hidden;
+    }
+
+    .container.feature .col-lg-6.pe-lg-0 .position-relative {
+        position: relative !important;
+    }
+
+    .container.feature .col-lg-6.pe-lg-0 .position-absolute {
+        position: absolute !important;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 }
 
@@ -391,6 +478,24 @@
 
     .quote-text  {
         padding-right: calc(((100% - 960px) / 2) + .75rem);
+    }
+
+    .container.quote .col-lg-6.ps-lg-0 {
+        position: relative;
+        overflow: hidden;
+    }
+
+    .container.quote .col-lg-6.ps-lg-0 .position-relative {
+        position: relative !important;
+    }
+
+    .container.quote .col-lg-6.ps-lg-0 .position-absolute {
+        position: absolute !important;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 }
 
